# test

./: .gitmodules  CMakeLists.txt  main.cpp
cmake/: gen_version.cmake
main/: CMakeLists.txt  version.h.in
